Fixed Issue with root whitespace

--- a/my-site/src/App.css
+++ b/my-site/src/App.css
@@ -2,8 +2,9 @@
 .App {
     text-align: center;
     font-family: 'Nunito', sans-serif;
-    overflow-y: auto;
+    overflow: auto;
     padding-bottom: 5rem;
+    height: 100vh;
 }
 
 @media screen and (max-width: 576px) {
